View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031768 | Open CASCADE | OCCT:Foundation Classes | public | 2020-09-15 12:56 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031768: Foundation Classes - use usleep within OSD::MilliSecSleep() | ||||
Description | OSD::MilliSecSleep() relies on select() as portable implementation of thread sleep functionality: > Emulating usleep(3) > Before the advent of usleep(3), some code employed a call to select() > with all three sets empty, nfds zero, and a non-NULL timeout as a > fairly portable way to sleep with subsecond precision. Nowadays, using select() for this reason looks unreasonable. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31768 has been created by kgv. SHA-1: 7d13e48e7e1c62873fc95794b6c7a98cbdb10da0 Detailed log of new commits: Author: kgv Date: Tue Sep 15 13:05:06 2020 +0300 0031768: Foundation Classes - use usleep within OSD::MilliSecSleep() |
|
Please raise the patch - OCCT branch: CR31768. http://jenkins-test-12.nnov.opencascade.com/view/CR31768-master-KGV |
|
Combination - OCCT branch : IR-2020-09-18 master SHA - b0b766826118f74b9857a932b8cec8c52a25c492 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-18 SHA - a6486d839da1ba1383ef6cc1a1a446a172f494c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17528.97000000011 / 17378.390000000145 [+0.87%] Products Total CPU difference: 12127.32000000009 / 12079.540000000095 [+0.40%] Windows-64-VC14: OCCT Total CPU difference: 18862.703125 / 18898.921875 [-0.19%] Products Total CPU difference: 13314.828125 / 13329.21875 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31768 has been deleted by inv. SHA-1: 7d13e48e7e1c62873fc95794b6c7a98cbdb10da0 |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-09-15 12:56 | kgv | New Issue | |
2020-09-15 12:56 | kgv | Assigned To | => abv |
2020-09-15 13:02 | git | Note Added: 0094826 | |
2020-09-15 19:28 | kgv | Note Added: 0094887 | |
2020-09-15 19:28 | kgv | Assigned To | abv => bugmaster |
2020-09-15 19:28 | kgv | Status | new => resolved |
2020-09-15 19:28 | kgv | Status | resolved => reviewed |
2020-09-19 15:47 | bugmaster | Test case number | => Not required |
2020-09-19 17:21 | bugmaster | Note Added: 0095078 | |
2020-09-19 17:21 | bugmaster | Status | reviewed => tested |
2020-09-20 10:55 | bugmaster | Changeset attached | => occt master 48cbe5f7 |
2020-09-20 10:55 | bugmaster | Status | tested => verified |
2020-09-20 10:55 | bugmaster | Resolution | open => fixed |
2020-09-20 11:13 | git | Note Added: 0095122 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |