0031768: Foundation Classes - use usleep within OSD::MilliSecSleep()